fix margins on list and spacing of search input

--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@
 .philolist {
   position: absolute;
   top: 10px;
-  left: 20px;
+  left: 10px;
   right: 20px;
   background-color: var(--dark-bg);
   color: white;
@@ -98,13 +98,15 @@
 
 .philosearch {
   position: relative;
-  top: 0px;
+  top: 0;
   left: 20px;
   border: 2px solid white;
   border-radius: 14px;
-  height: 24px;
-  padding: 3px 10px;
+  height: 23px;
+  padding: 4px 10px;
+  padding-bottom: 4px;
   width: calc(100% - 62px);
+  padding-bottom: 6px;
 }
 
 .philodefcontainer {
